Fix horizontal spacing issue

--- a/site/public/css/electronic.css
+++ b/site/public/css/electronic.css
@@ -375,7 +375,7 @@ progress::-webkit-progress-value {
 
 .panels-container {
     height: calc(100% - 140px);
-    margin: 0 6px;
+    margin: 0;
     background: var(--standard-medium-gray);
 }
 
